# ArchViz

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_windows.bat
engine/: .gitignore  CMakeLists.txt
engine/asset-test/data/model/nanosuit/: nanosuit_arm.mtl  nanosuit_body.mtl  nanosuit_hands.mtl  nanosuit_helmet.mtl  nanosuit_legs.mtl  nanosuit_visor.mtl
engine/asset-test/level/: 0-1.level.json  0-2.level.json
engine/asset-test/material/: silver.material.json
engine/asset-test/material/nanosuit/: arm.material.json  body.material.json  hands.material.json  helmet.material.json  legs.material.json  visor.material.json
engine/asset-test/mesh/environment/: floor.mesh.json
engine/asset-test/mesh/nanosuit/: nanosuit.mesh.json
engine/asset-test/objects/: nanosuit.object.json
engine/asset-test/objects/environment/: fence.object.json  floor.object.json  sphere.mesh.json  stairs.object.json
engine/asset-test/objects/environment/floor/: floor.object.json
engine/asset-test/objects/material/: gold.material.json  white.material.json
engine/asset-test/objects/mesh/: cube.mesh.json
engine/asset-test/render/: device.vulkan.json  instance.vulkan.json  test.frame_graph.json
engine/asset-test/world/: 0.world.json
engine/config/: ArchVizEditor.ini  config.vfs.json  config.vfs.json.bak  config.window.json
engine/shader-example/: CMakeLists.txt
engine/shader/glsl/: imgui.frag  imgui.vert  shader_compute.comp  shader_phong.frag  shader_phong.vert  shader_textures.frag  shader_textures.vert
engine/source/: .gitignore
engine/source/editor/: CMakeLists.txt
engine/source/editor/resource/: PiccoloEditor.rc
engine/source/meta_parser/: CMakeLists.txt
engine/source/runtime/: CMakeLists.txt
engine/source/runtime/core/base/: crc.cpp  crc.h  delegate.h  endian.h  fps_counter.h  hash.cpp  hash.h  instanceof.h  macro.h  trace.h
engine/source/runtime/core/color/: color.h
engine/source/runtime/core/container/: linked_list.cpp  linked_list.h  lru_cache.h  queue.h  rb_tree.cpp  rb_tree.h
engine/source/runtime/core/event/: event.h  event_system.h  listener.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  graphics_utils.cpp  graphics_utils.h  math.cpp  math.h  math_headers.h  math_type.h  matrix2.cpp  matrix2.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  matrixN.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h  vectorN.h
engine/source/runtime/core/math/curve/: bezier_curve.h
engine/source/runtime/core/math/geometry/: axis_aligned.cpp  axis_aligned.h  frustum.cpp  frustum.h  trackball.h
engine/source/runtime/core/math/matrix/: matrix2.cpp  matrix2.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  matrixN.h
engine/source/runtime/core/math/solver/: lcp.cpp  lcp.h
engine/source/runtime/core/math/vector/: vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h  vectorN.h
engine/source/runtime/core/memory/: Readme.md  allocator.h  buddy_allocator.h  cache_aligned_allocator.h  free_list_allocator.h  free_tree_allocator.h  huge_page_allocator.h  linear_allocator.h  memory.h  memory_arena.cpp  memory_arena.h  memory_pool.h  memory_utils.cpp  memory_utils.h  move_allocator.h  pool_allocator.h  simple_allocator.h  slab_allocator.cpp  slab_allocator.h  stack_allocator.h
engine/source/runtime/core/memory/allocators/: buddy_allocator.h  cache_aligned_allocator.h  free_list_allocator.h  free_tree_allocator.h  linear_allocator.h  memory_pool.h  simple_allocator.h  slab_allocator.cpp  stack_allocator.h
engine/source/runtime/core/memory/arena/: memory_arena.cpp
engine/source/runtime/core/meta/: json.h  meta_example.cpp  meta_example.h  reflect.h
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
engine/source/runtime/core/pattern/: singleton.h
engine/source/runtime/core/string/: string_utils.cpp  string_utils.h
engine/source/runtime/core/thread/: lock_less_multi_read_pipe.h  spin_lock.h  thread_pool.cpp  thread_pool.h  work_executor.h
engine/source/runtime/core/time/: time_service.cpp  time_service.h
engine/source/runtime/function/command/: command.cpp  command.h  command_system.cpp  command_system.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/render/: render_camera.cpp  render_camera.h  render_data.h  render_system.cpp  render_system.h  render_type.h
engine/source/runtime/function/resource/: resource_manager.cpp  resource_manager.h
engine/source/runtime/function/window/: window_system.cpp  window_system.h
engine/source/runtime/platform/file_service/: file_service.cpp  file_service.h
engine/source/runtime/platform/file_system/: Readme.md  vfs.cpp  vfs.h  vfs_config.h
engine/source/runtime/platform/path/: path.cpp  path.h
engine/source/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h
engine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
engine/source/runtime/resource/loader/: gltf_loader.cpp  gltf_loader.h  loader.h  obj_loader.cpp  obj_loader.h
engine/source/runtime/resource/resource_manager/: resource_array.cpp  resource_array.h  resource_handle.cpp  resource_handle.h  resource_manager.cpp  resource_manager.h
engine/source/unit_test/: CMakeLists.txt  frame_graph_test.cpp  gltf_test.cpp  level_load_test.cpp  log_test.cpp  memory_test.cpp  model_load_test.cpp  reflect_test.cpp  resource_test.cpp  shader_compile_test.cpp  texture_load_test.cpp  vfs_test.cpp  vulkan_test.cpp  window_test.cpp
engine/source/unit_test/x9/: x9_example_1.c  x9_example_2.c  x9_example_3.c  x9_example_4.c  x9_example_5.c  x9_example_6.c
engine/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
script/: build_macos.sh  (+3 more)
(+317 files in other folders)
